# tuari-plugin-android-mediastore

./: CLAUDE.md  Cargo.toml  README.md  build.rs  package.json
.claude/skills/acl-fix/: SKILL.md
.claude/skills/add-devtools/: SKILL.md
.claude/skills/skill-creator/: SKILL.md
.claude/skills/skill-creator/scripts/: create-skill.sh
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt  MediaStorePluginInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: Example.kt  ExamplePlugin.kt  MediaStoreCommands.kt  MediaStoreHelper.kt  MediaStorePlugin.kt
android/src/test/java/: ExampleUnitTest.kt  MediaStoreUnitTest.kt
examples/mediastore/: README.md  build-android.sh  index.html  package.json
examples/mediastore/src/: main.ts  styles.css
examples/mediastore/src-tauri/: Cargo.toml  tauri.conf.json
examples/mediastore/src-tauri/capabilities/: default.json
examples/mediastore/src-tauri/src/: lib.rs  main.rs
examples/tauri-app/: build-android.sh  package.json  permissions
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
guest-js/: index.ts
permissions/: android.toml  default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: file_reader_close.toml  file_reader_info.toml  file_reader_open.toml  file_reader_read.toml  file_reader_read_to_end.toml  file_reader_seek.toml  get_audio_files.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
(+2 files in other folders)
