[package]
name = "tauri-plugin-android-mediastore"
version = "0.1.3"
authors = ["afeather"]
description = "A Tauri plugin for accessing Android MediaStore API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/afeather/tauri-plugin-android-mediastore"
homepage = "https://github.com/afeather/tauri-plugin-android-mediastore"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-android-mediastore"

[dependencies]
tauri = { version = "2.10.0" }
serde = "1.0"
serde_json = "1"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }
